--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "vite preview"
+    "start": "serve -s dist -l 8080"
   },
   "dependencies": {
-    "@google/genai": "^0.2.1",
+    "@google/genai": "^0.1.2",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
+    "react-dom": "^18.3.1",
+    "vite": "^5.4.1",
+    "@vitejs/plugin-react": "^4.3.1",
+    "serve": "^14.2.3",
+    "typescript": "^5.5.3",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.1"
+    "@types/react-dom": "^18.3.1"
   }
 }
